# QtWeChat

./: CMakeLists.txt  chatbox.cpp  chatbox.h  chatbox.ui  chatlist.cpp  chatlist.h  chatlist.ui  logindialog.cpp  logindialog.h  logindialog.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  sidebar.cpp  sidebar.ui
